fix spacing and remove details

--- a/css/style.css
+++ b/css/style.css
@@ -421,36 +421,52 @@ nav a:focus {
 
 /* --- Experience section ---*/
 
-#container-exp {
-	text-align: left;
-}
-
 .experience h1 {
 	text-align: center;
 }
 
 .experience h2 {
-	font-weight: 700;
-	font-size: 1.9em;
+	font-weight: 500;
+	font-size: 1.2em;
 	margin: 0;
-	padding-bottom: 0.7em;
-	padding-left: 3em;
+	padding-bottom: 0.3em;
+	padding-top: 0.3em;
+	margin: 0.2em;
+	text-align: center;
+	display: inline-block;
+	text-transform: uppercase;
+	letter-spacing: 0.2em;
+}
+
+.h2-box {
+	margin-top: 1em;
+	border-radius: 15px;
+	padding-left: 1.6em;
+	padding-right: 1.6em;
+	background: rgb(220,220,220);
 }
 
 i {
 	padding-right: .8em;
+	padding-left: .8em;
 }
 
 .sub-exp-right ul {
 	list-style: none;
-	margin-left: 2em;
+	text-align: center;
+}
+
+.unstyled-list {
+	padding-left: 0;
 }
 
 .unstyled-list li {
-	font-size: 1.3em;
+	font-size: 1.5em;
+	font-weight: 700;
 	padding: 0;
-	padding-bottom: 1em;
-	font-style: italic;
+	padding-bottom: 0.7em;
+	font-style: none;
+	letter-spacing: 0.05rem;
 }
 
 .unstyled-list .add-ons {
@@ -461,10 +477,10 @@ i {
 }
 
 .unstyled-list #subtitle {
-	font-style: normal;
-	font-weight: 700;
+	font-style: italic;
+	font-weight: 300;
 	font-size: 1em;
-	color: gray;
+	color: rgb(160,160,160);
 }
 
 .inner-experience {
@@ -481,43 +497,4 @@ i {
 
 .unstyled-list li a {
 	text-decoration: none;
-}
-
-hr {
-	width: 0%;
-	min-width: 20%;
-	max-width: 100%;
-	margin: 0 auto;
-	border: none;
-	border-bottom: 1px solid #666;
-	position: relative;
-	transition: box-shadow 200ms ease-in-out;
-	box-shadow: 0px 0px 0px 0px #f9f9f9;
-	padding-top: 5px;
-	padding-bottom: 5px;
-  }
-  
-hr.activated {
-	box-shadow: 0px 4px 0px 0px #666;
-}
-
-label {
-	position: absolute;
-	opacity: 0;
-	right: 100%;
-	margin-right: 4px;
-	padding: 4px;
-	height: 12px;
-	font-size: 14px;
-	margin-top: -12px;
-	border-radius: 2px 4px;
-	transition: opacity 200ms ease-in-out;
-	color: #666;
-	width: 100px;
-	text-align: right;
-	line-height: 1.2;
-}
-
-hr.activated + label {
-	opacity: 1;
 }
